# jj-pattern

./: .gitignore  CODE-OF-CONDUCT.rdoc  LICENSE  Makefile.am  README.md  README.rdoc  configure.ac
jj/: errno.h  pattern.h
sample/: Dockerfile  Dockerfile-cpp  Dockerfile-lib  build.sh
src/: Doxyfile  errno.cpp  pattern.cpp
test/pattern/: 00_abs.cpp  00_downcast.cpp  00_multiple-inheritance.cpp  01_test.cpp  02_test.cpp  Makefile  collect_test.cpp  dcollect_test.cpp  hash_test.cpp
